--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.0}
+  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.0}  # original image
+  image: ${AIRFLOW_IMAGE_NAME:-extending_airflow:latest}  # extended image with custom python dependencies
   # build: .
   environment:
     &airflow-common-env
@@ -87,6 +88,8 @@ services:
       POSTGRES_DB: airflow
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
